--- a/Pandas/pandas.ipynb
+++ b/Pandas/pandas.ipynb
@@ -42,7 +42,7 @@
    ],
    "source": [
     "import pandas\n",
-    "result=pandas.read_csv(\"README.csv\")\n",
+    "result=pandas.read_csv(\"READ2.csv\")\n",
     "print(result)"
    ]
   },
