--- a/CSV/CSV reader.ipynb
+++ b/CSV/CSV reader.ipynb
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "import csv\n",
-    "with open(\"README.csv\",'w') as file:\n",
+    "with open(\"READ.csv\",'w') as file:\n",
     "  write=csv.writer(file, delimiter=\",\")\n",
     "  write.writerow(['NAME', 'PLACE', 'DISTANCE', 'FEE'])\n",
     "  write.writerow(['BAIVAB','BANDEL','13','10'])\n",
@@ -281,7 +281,7 @@
    "source": [
     "import csv\n",
     "from csv import writer\n",
-    "with open(\"README_2.csv\",'+a',newline='')as f:\n",
+    "with open(\"READ2.csv\",'+a',newline='')as f:\n",
     "  csvwrt=writer(f)\n",
     "  si=input(\"Enter ID : \")\n",
     "  snm=input(\"Enter name : \")\n",
